--- a/src/css/GroupList.css
+++ b/src/css/GroupList.css
@@ -18,7 +18,7 @@
   font-size: 16px;
   font-family: Arial, sans-serif;
 
-  box-shadow: 0.15px 0.15px 15px #888888;
+  box-shadow: 0.15px 0.15px 15px whitesmoke;
 
   -webkit-overflow-scrolling: touch;
 }
