--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -3,6 +3,7 @@
   padding: 12px;
   border-radius: 18px;
   color: white;
+  text-shadow: 0.15px 0.15px 6px whitesmoke;
 }
 
 .profile--sub {
@@ -55,7 +56,7 @@
 .profile__info__description {
   border: 2px solid var(--border-color);
   border-radius: 14px;
-
+  box-shadow: 0.15px 0.15px 15px whitesmoke;
   padding: 10px;
   width: 400px;
   height: 160px;
