--- a/src/css/GroupList.css
+++ b/src/css/GroupList.css
@@ -1,10 +1,24 @@
+.section-group-list {
+  background-image: linear-gradient(to right bottom, #6a5af9, #f62682);
+  padding: 8px;
+  border-radius: 18px;
+  box-shadow: 0.5px 0.5px 25px #6a5af9;
+}
+
+.div-group-list {
+  width: 100%;
+  height: 100%;
+  background-color: #191a28;
+  border-radius: inherit;
+}
+
 .group-list {
   color: black;
   list-style: none;
 
   background-color: white;
-  width: 400px;
-  height: 240px;
+  /*   width: 400px;
+  height: 240px; */
 
   border: 1px solid var(--border-color);
   border-radius: 14px;
@@ -33,6 +47,9 @@
 
 .group-list__item {
   padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .group-list__item:last-child {
@@ -41,4 +58,10 @@
 
 .group-list__item:nth-child(even) {
   background: #f1f3f5;
+}
+
+.group-list__item .group-list__item--left {
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
