useState, about us, react router flow implementations

--- a/src/css/GroupList.css
+++ b/src/css/GroupList.css
@@ -50,6 +50,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
 }
 
 .group-list__item:last-child {
