--- a/src/css/MemberList.css
+++ b/src/css/MemberList.css
@@ -1,10 +1,60 @@
 .section-member-list {
   width: 900px;
+  background-image: linear-gradient(to right bottom, #6a5af9, #f62682);
+  padding: 8px;
+  border-radius: 18px;
+  box-shadow: 0.5px 0.5px 25px #6a5af9;
+}
+
+.div-member-list {
+  width: 100%;
+  height: 100%;
+  background-color: #191a28;
+  border-radius: inherit;
 }
 
 .member-list__item {
-  padding: 10px 20px;
+  padding: 20px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.member-list {
+  color: black;
+  list-style: none;
+
+  background-color: white;
+  /*   width: 400px;
+  height: 240px; */
+
+  border: 1px solid var(--border-color);
+  border-radius: 14px;
+
+  margin: 0;
+  padding: 10px 0;
+
+  overflow: scroll;
+  overflow-y: auto;
+
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+
+  box-shadow: 0.15px 0.15px 15px whitesmoke;
+
+  -webkit-overflow-scrolling: touch;
+}
+
+.member-list__item:last-child {
+  border-bottom: none;
+}
+
+.member-list__item:nth-child(even) {
+  background: #f1f3f5;
+}
+
+.member-list__item .member-list__item--left {
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
