--- a/src/css/GroupList.css
+++ b/src/css/GroupList.css
@@ -20,7 +20,7 @@
   /*   width: 400px;
   height: 240px; */
 
-  border: 1px solid var(--border-color);
+  border: 1px solid var(#f62682);
   border-radius: 14px;
 
   margin: 0;
