add error notifications

--- a/src/css/ShowGroups.css
+++ b/src/css/ShowGroups.css
@@ -1,6 +1,6 @@
-.section-show-groups .container {
+/* .section-show-groups .container {
   width: 900px;
-}
+} */
 .section-show-groups .group-list {
   height: 600px;
 }
