--- a/src/components/group/css/CreateGroupForm.css
+++ b/src/components/group/css/CreateGroupForm.css
@@ -1,5 +1,9 @@
 .form .btn-submit {
-  background-image: linear-gradient(to right bottom, #6a5af9, #f62682);
+  background-image: linear-gradient(
+    to right bottom,
+    var(--secondary-purple-color),
+    var(--secondary-pink-color)
+  );
   border: none;
   padding: 6px 18px;
 
