--- a/src/components/group/css/MemberList.css
+++ b/src/components/group/css/MemberList.css
@@ -1,9 +1,13 @@
 .section-member-list {
   width: 900px;
-  background-image: linear-gradient(to right bottom, #6a5af9, #f62682);
+  background-image: linear-gradient(
+    to right bottom,
+    var(--secondary-purple-color),
+    var(--secondary-pink-color)
+  );
   padding: 8px;
   border-radius: 18px;
-  box-shadow: 0.5px 0.5px 25px #6a5af9;
+  box-shadow: 0.5px 0.5px 25px var(--secondary-purple-color);
 }
 
 .div-member-list {
