--- a/src/components/presentation/css/ScrollSlides.css
+++ b/src/components/presentation/css/ScrollSlides.css
@@ -1,22 +1,22 @@
 .scroll-slides {
-  background-color: var(--secondary-fresh-blue-color);
+  background-color: var(--dark-bg-color);
+  font-size: 14px;
 }
 
 .scroll-slides__list {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 30px 0;
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
 
 .scroll-slides__item {
-  margin: 30px;
-  /*   width: 200px;
-  height: 100px; */
-  background-color: gray;
-  display: inline-block;
+  background: transparent;
 }
 
 .scroll-slides__item.last-item {
