--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,6 +10,8 @@
   --secondary-dark-blue-color: #6272a4;
   --secondary-red-color: #ff5555;
   --secondary-yellow-color: #f1fa8c;
+  --secondary-light-gray-color: rgba(64, 87, 109, 0.07);
+  --secondary-dark-gray-color: rgba(57, 76, 96, 0.15);
   /*   --aside-color: #e9ecef; */
   /*   --center-color: #fff;
 
