--- a/src/components/presentation/css/Chart.css
+++ b/src/components/presentation/css/Chart.css
@@ -1,9 +1,9 @@
 .chart {
-  padding: 30px;
-  border-radius: 12px;
-  background-color: #f8dfff;
+  padding: 0.5em;
+  background-color: transparent;
   text-align: center;
   display: flex;
   justify-content: space-around;
-  height: 300px;
+  background-color: var(--secondary-dark-gray-color);
+  border-radius: 0.15em;
 }
