--- a/src/components/presentation/css/ChartBar.css
+++ b/src/components/presentation/css/ChartBar.css
@@ -1,5 +1,5 @@
 .chart-bar {
-  height: 100%;
+  height: 4em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,10 +7,9 @@
 
 .chart-bar__inner {
   height: 100%;
-  width: 100%;
+  width: 0.8em;
   border: 1px solid #313131;
-  border-radius: 12px;
-  background-color: #c3b4f3;
+  background-color: var(--secondary-light-gray-color);
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -18,13 +17,13 @@
 }
 
 .chart-bar__fill {
-  background-color: #4826b9;
+  background-color: var(--secondary-pink-color);
   width: 100%;
   transition: all 0.3s ease-out;
 }
 
 .chart-bar__label {
   font-weight: bold;
-  font-size: 0.5rem;
+  font-size: 0.4em;
   text-align: center;
 }
