--- a/src/components/presentation/css/Slide.css
+++ b/src/components/presentation/css/Slide.css
@@ -1,11 +1,9 @@
 .slide {
   background-color: white;
   color: black;
-  padding: 0;
+  padding: 0.3em;
   position: relative;
-  width: 1100px;
-  height: 550px;
-  border-radius: 8px;
+  border-radius: 0.3em;
   cursor: pointer;
 }
 
@@ -30,6 +28,7 @@
 .slide__title {
   font-weight: bold;
   font-size: 1em;
+  margin-bottom: 0.3em;
 }
 
 .last-slide .slide__title {
