--- a/src/components/presentation/css/Slide.css
+++ b/src/components/presentation/css/Slide.css
@@ -25,18 +25,18 @@
   background-color: var(--secondary-dark-gray-color);
 }
 
-.slide__title {
+.slide__question {
   font-weight: bold;
   font-size: 1em;
   margin-bottom: 0.3em;
 }
 
-.last-slide .slide__title {
+.last-slide .slide__question {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 2.5rem;
+  font-size: 45px;
 }
 
 .slide__list {
@@ -44,4 +44,16 @@
   margin: 0;
   padding: 0;
   font-size: 0.6em;
+}
+
+.others-view {
+  font-size: 0.5em;
+}
+
+.others-view label {
+  margin-left: 0.3em;
+}
+
+.others-view.mini input[type="radio"] {
+  transform: scale(0.3);
 }
