--- a/src/components/modal/css/BasicModal.css
+++ b/src/components/modal/css/BasicModal.css
@@ -1,4 +1,4 @@
-.create-group-modal {
+.basic-modal {
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -9,19 +9,13 @@
   z-index: 10;
 }
 
-.create-group-modal-overlay {
+.basic-modal-overlay {
   width: 100%;
   height: 100%;
   background-color: rgba(22, 22, 22, 0.753);
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  position: fixed;
-  z-index: 10;
 }
 
-.create-group-modal-content {
+.basic-modal-content {
   position: absolute;
   width: 300px;
   height: 200px;
@@ -31,9 +25,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: black;
 }
 
-.create-group-modal-content__close-btn {
+.basic-modal-content__close-btn {
   position: absolute;
   top: 5px;
   right: 10px;
