--- a/src/components/group/css/GroupList.css
+++ b/src/components/group/css/GroupList.css
@@ -1,72 +1,3 @@
-.section-group-list {
-  background-image: linear-gradient(
-    to right bottom,
-    var(--secondary-purple-color),
-    var(--secondary-pink-color)
-  );
-  padding: 8px;
-  border-radius: 18px;
-  box-shadow: 0.5px 0.5px 25px var(--secondary-purple-color);
-}
-
-.div-group-list {
-  width: 100%;
-  height: 100%;
-  background-color: #191a28;
-  border-radius: inherit;
-}
-
-.group-list {
-  color: black;
-  list-style: none;
-
-  background-color: white;
-  /*   width: 400px;
-  height: 240px; */
-
-  border: 1px solid var(var(--secondary-pink-color));
-  border-radius: 14px;
-
-  margin: 0;
-  padding: 10px 0;
-
-  overflow: scroll;
-  overflow-y: auto;
-
-  font-size: 16px;
-  font-family: Arial, sans-serif;
-
-  box-shadow: 0.15px 0.15px 15px whitesmoke;
-
-  -webkit-overflow-scrolling: touch;
-}
-
-.group-list__title {
-  text-align: center;
-  padding-bottom: 10px;
-
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.group-list__item {
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-}
-
-.group-list__item:last-child {
-  border-bottom: none;
-}
-
-.group-list__item:nth-child(even) {
-  background: #f1f3f5;
-}
-
-.group-list__item .group-list__item--left {
-  display: flex;
-  align-items: center;
-  gap: 15px;
+.group__list {
+  background-color: var(--bg-color);
 }
