--- a/src/components/modal/css/BasicModal.css
+++ b/src/components/modal/css/BasicModal.css
@@ -9,11 +9,11 @@
   z-index: 10;
 }
 
-.basic-modal-overlay {
+/* .basic-modal-overlay {
   width: 100%;
   height: 100%;
   background-color: rgba(22, 22, 22, 0.753);
-}
+} */
 
 .basic-modal-content {
   position: absolute;
