--- a/src/components/page/css/Page.css
+++ b/src/components/page/css/Page.css
@@ -1,5 +1,34 @@
 .page {
-  display: flex;
-  flex-direction: row;
+  position: relative;
   height: 100%;
+  padding: 40px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: stretch;
+}
+
+.page .page__content {
+  flex: 1 0 0;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.page .scroll {
+  overflow-y: auto;
+}
+
+.page .page__title {
+  flex: 1;
+  font-weight: bold;
+  padding: 8px 14px;
+  border-radius: 6px;
+  width: max-content;
+  background-color: var(--secondary-purple-color);
+  box-shadow: 0.5px 0.5px 35px var(--secondary-purple-color);
+}
+
+.page__footer .btn {
+  margin-right: 10px;
 }
