--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,7 +2,13 @@
   /*   --header-color: #099268; */
   --header-color: #191a28;
   --footer-color: #191a28;
+
   --bg-color: #212233;
+  --dark-bg-color: #191a28;
+  --light-dark-bg-color: #22243b;
+  --plain-bg-color: #191a28;
+  --border-color: #f1f3f5;
+  --overlay-color: rgba(0, 0, 0, 0.5);
 
   --secondary-pink-color: #f62682;
   --secondary-purple-color: #6a5af9;
@@ -12,15 +18,6 @@
   --secondary-yellow-color: #f1fa8c;
   --secondary-light-gray-color: rgba(64, 87, 109, 0.07);
   --secondary-dark-gray-color: rgba(57, 76, 96, 0.15);
-  /*   --aside-color: #e9ecef; */
-  /*   --center-color: #fff;
-
-    --footer-text-color: #adb5bd; */
-
-  --plain-bg-color: #191a28;
-  --border-color: #f1f3f5;
-  --dark-bg-color: #191a28;
-  --light-dark-bg-color: #22243b;
 }
 
 * {
