restructure react route dom with protected

--- a/src/components/page/css/Page.css
+++ b/src/components/page/css/Page.css
@@ -1,15 +1,15 @@
 .page {
+  flex: 1;
   position: relative;
-  height: 100%;
   padding: 40px;
 
-  display: flex;
+  /*   display: flex;
   flex-direction: column;
   gap: 20px;
-  align-items: stretch;
+  align-items: stretch; */
 }
 
-.page .page__content {
+/* .page .page__content {
   flex: 1 0 0;
   width: 100%;
   margin: 0 auto;
@@ -32,3 +32,4 @@
 .page__footer .btn {
   margin-right: 10px;
 }
+ */
