--- a/src/components/group/css/GroupItem.css
+++ b/src/components/group/css/GroupItem.css
@@ -1,41 +1,41 @@
-.group__item {
+.list .group__item {
   min-width: 100px;
   padding: 5px 40px;
   background-color: inherit;
 }
 
-.group__item .group__item--link {
+.list .group__item .group__item--link {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.group__item:last-child {
+.list .group__item:last-child {
   border-bottom: none;
 }
 
-.group__item:nth-child(even) {
+.list .group__item:nth-child(even) {
   background-color: var(--plain-bg-color);
 }
 
-.group__item-head {
+.list .group__item-head {
   display: flex;
   align-items: center;
   gap: 15px;
 }
 
-.group__item .group__name {
+.list .group__item .group__name {
   font-size: 24px;
   font-weight: bold;
   text-shadow: 0.15px 0.15px 6px whitesmoke;
 }
 
-.group__item .group__total-member {
+.list .group__item .group__total-member {
   font-size: 12px;
   color: var(--secondary-pink-color);
 }
 
-.group__item .group__author {
+.list .group__item .group__author {
   font-size: 11px;
   font-style: italic;
   color: white;
