--- a/src/components/group/css/List.css
+++ b/src/components/group/css/List.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
 }
 
-.group__list {
+.list {
   padding: 0px;
   color: white;
   list-style-type: none;
@@ -12,16 +12,22 @@
   height: 100%;
 }
 
-.group__list::-webkit-scrollbar {
+.list::-webkit-scrollbar {
   width: 8px;
 }
 
-.group__list::-webkit-scrollbar-track {
+.list::-webkit-scrollbar-track {
   background-color: #fafafa;
   border-radius: 50px;
 }
 
-.group__list::-webkit-scrollbar-thumb {
+.list::-webkit-scrollbar-thumb {
   background-color: var(--secondary-dark-blue-color);
   border-radius: 50px;
+}
+
+.list a,
+.list a:link {
+  color: white;
+  text-decoration: none;
 }
