--- a/src/components/group/css/MemberItem.css
+++ b/src/components/group/css/MemberItem.css
@@ -1,30 +1,11 @@
-.section-member-list {
-  width: 900px;
-  background-image: linear-gradient(
-    to right bottom,
-    var(--secondary-purple-color),
-    var(--secondary-pink-color)
-  );
-  padding: 8px;
-  border-radius: 18px;
-  box-shadow: 0.5px 0.5px 25px var(--secondary-purple-color);
-}
-
-.div-member-list {
-  width: 100%;
-  height: 100%;
-  background-color: #191a28;
-  border-radius: inherit;
-}
-
-.member__item {
+.list .member__item {
   padding: 20px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.member-list {
+.list .member-list {
   height: 600px;
   color: black;
   list-style: none;
@@ -50,15 +31,15 @@
   -webkit-overflow-scrolling: touch;
 }
 
-.member__item:last-child {
+.list .member__item:last-child {
   border-bottom: none;
 }
 
-.member__item:nth-child(even) {
+.list .member__item:nth-child(even) {
   background: #f1f3f5;
 }
 
-.member__item .member__item--left {
+.list .member__item .member__item--left {
   display: flex;
   align-items: center;
   gap: 15px;
