--- a/src/components/footer/css/Footer.css
+++ b/src/components/footer/css/Footer.css
@@ -3,6 +3,7 @@ footer {
   background-color: var(--footer-color);
   padding: 12px 40px;
   height: 100px;
+  min-height: 100px;
   font-size: 12px;
   display: flex;
   flex-direction: row;
