--- a/src/components/pagination/css/Pagination.css
+++ b/src/components/pagination/css/Pagination.css
@@ -7,13 +7,33 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
-
+  gap: 32px;
   width: 98%;
 }
 
+.pagination__list .pagination__item {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination__list .pagination__item--circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  transition-delay: 0.15s;
+  transition: all 0.15s ease-in-out;
+}
+
 .pagination__list .pagination__item:hover .pagination__item--circle {
-  /*   background-color: var(--secondary-purple-color); */
+  width: 32px;
+  height: 32px;
+  border: 3px solid var(--secondary-pink-color);
+  border-radius: 50%;
+  text-align: center;
 }
 
 .pagination__list .pagination__item.selected .pagination__item--circle {
