--- a/src/components/button/css/Button.css
+++ b/src/components/button/css/Button.css
@@ -8,4 +8,8 @@
 
   font-weight: bold;
   letter-spacing: 0.2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
