--- a/src/components/button/css/MonoButton.css
+++ b/src/components/button/css/MonoButton.css
@@ -1,3 +1,3 @@
 .btn--mono {
-  box-shadow: 0.5px 0.5px 15px var(--secondary-pink-color);
+  /*   box-shadow: 0.5px 0.5px 15px var(--secondary-pink-color); */
 }
