--- a/src/components/header/css/Header.css
+++ b/src/components/header/css/Header.css
@@ -4,25 +4,7 @@ header {
   background-color: var(--header-color);
   display: flex;
   align-items: center;
-  gap: 20px;
-}
-
-.header__navbar {
-  overflow-y: auto;
-}
-
-.header__navbar::-webkit-scrollbar {
-  height: 4px;
-}
-
-.header__navbar::-webkit-scrollbar-track {
-  background-color: #fafafa;
-  border-radius: 50px;
-}
-
-.header__navbar::-webkit-scrollbar-thumb {
-  background-color: var(--secondary-dark-blue-color);
-  border-radius: 50px;
+  gap: 60px;
 }
 
 .nav__item {
@@ -57,15 +39,15 @@ a:hover:link {
 .header__title,
 .header__title:link {
   display: inline-block;
-  font-size: 32px;
-  font-weight: 700;
+  font-size: 42px;
+  text-transform: uppercase;
   font-family: sans-serif;
+
   margin: 0;
   letter-spacing: -0.5px;
-}
 
-.header__title {
-  font-size: 32px;
+  min-width: max-content;
+
   background: -webkit-linear-gradient(
     var(--secondary-purple-color),
     var(--secondary-pink-color)
