--- a/src/components/presentation/css/SlideCustomization.css
+++ b/src/components/presentation/css/SlideCustomization.css
@@ -1,25 +1,72 @@
-.slide-customization {
+.slide-config {
   height: 100%;
   flex: 3;
   background-color: var(--header-color);
-
   padding: 30px;
 }
 
-.slide-customization__section {
-  margin-bottom: 40px;
+.slide-config section {
+  margin-bottom: 60px;
 }
 
-.slide-customization__title {
-  color: var(--secondary-purple-color);
+.slide-config__title {
+  font-size: 14px;
+  color: white;
+  font-family: Canva Sans, Noto Sans Variable, Noto Sans, -apple-system,
+    BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
+  display: inline-block;
+  margin-bottom: 10px;
 }
 
-.slide-customization__input {
+.slide-config input[type="color"] {
+  width: 20px;
+  height: 20px;
+  margin-left: 20px;
+}
+
+.slide-config img {
+  display: none;
+}
+
+.slide-config__list {
+  max-height: 200px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.slide-config__list .custom-input {
+  margin-bottom: 20px;
+  margin-right: 80px;
+}
+
+.slide-config__list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.slide-config__list::-webkit-scrollbar-track {
+  background-color: #fafafa;
+  border-radius: 50px;
+}
+
+.slide-config__list::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-purple-color);
+  border-radius: 50px;
+}
+
+/* .slide-config__input {
   display: block;
   margin-bottom: 15px;
   width: 70%;
+} */
+
+.slide-config .btn--add-option {
+  font-size: 14px;
 }
 
-/* .slide-customization__btn {
+.slide-config .btn--add-option:hover {
+  color: var(--secondary-purple-color);
+}
+
+/* .slide-config__btn {
   width: 80%;
 } */
