--- a/src/components/slide/css/RadioAnswer.css
+++ b/src/components/slide/css/RadioAnswer.css
@@ -1,34 +1,97 @@
+/* DEFAULTS */
+/* =============================================== */
 .radio-answer {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  gap: 10px;
-  padding: 0px 20px;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Open Sans", sans-serif;
 }
 
-.radio__item {
+/* MAIN */
+/* =============================================== */
+.rad-label {
+  width: max-content;
+
   display: flex;
   align-items: center;
-  gap: 10px;
-}
 
-.radio__input {
-  display: none;
-}
+  border-radius: 100px;
+  padding: 14px 16px;
+  margin: 10px 0;
 
-.radio__label {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #eee;
-  display: inline-block;
   cursor: pointer;
-  margin: 0 1rem;
-  box-shadow: 0 0 0 4px #eee;
-  transition: all 0.25s linear;
+  transition: 0.3s;
 }
 
-.radio__input:checked + .radio__label {
-  box-shadow: 0 0 0 4px #fff, 0 0 0 6px #fd656b;
-  background-color: #fd656b;
+.rad-label:hover,
+.rad-label:focus-within {
+  background: hsla(0, 0%, 80%, 0.14);
+}
+
+.rad-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+  z-index: -1;
+}
+
+.rad-design {
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+
+  background: linear-gradient(
+    to right bottom,
+    /*     hsl(154, 97%, 62%),
+    hsl(225, 97%, 62%) */
+      var(--secondary-purple-color),
+    var(--secondary-pink-color)
+  );
+  position: relative;
+}
+
+.rad-design::before {
+  content: "";
+
+  display: inline-block;
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+
+  background: hsl(0, 0%, 90%);
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+.rad-input:checked + .rad-design::before {
+  transform: scale(0);
+}
+
+.rad-text {
+  color: hsl(0, 0%, 60%);
+  margin-left: 14px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: 900;
+
+  transition: 0.3s;
+}
+
+.rad-input:checked ~ .rad-text {
+  color: var(--secondary-pink-color);
+}
+
+/* ABS */
+/* ====================================================== */
+.abs-site-link {
+  position: fixed;
+  bottom: 40px;
+  left: 20px;
+  color: hsla(0, 0%, 0%, 0.5);
+  font-size: 16px;
 }
