--- a/src/components/slide/css/Slide.css
+++ b/src/components/slide/css/Slide.css
@@ -1,7 +1,11 @@
 .slide {
-  background-color: white;
-  color: black;
+  width: 100%;
+  height: 100%;
   padding: 60px;
+  background-color: lightgoldenrodyellow;
+
+  color: #212529;
+
   position: relative;
   /*   background-color: gray; */
   /*  border-radius: 8px; */
