--- a/src/page/css/EditorPage.css
+++ b/src/page/css/EditorPage.css
@@ -1,3 +1,11 @@
+.page.page--editor-page {
+  height: 100%;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .edit-presentation {
   display: flex;
   justify-content: space-between;
@@ -7,8 +15,8 @@
 
 .edit-presentation--left {
   height: 100%;
-  min-width: 400px;
-  flex: 0;
+  /*   min-width:  */
+  flex: 1;
 }
 
 .edit-presentation--right {
