--- a/src/components/presentation/css/MainEditorFrame.css
+++ b/src/components/presentation/css/MainEditorFrame.css
@@ -1,5 +1,8 @@
 .main-editor-frame {
-  flex: 4;
+  /*   width: 100%;
+  height: 100%; */
   background-color: var(--secondary-light-gray-color);
   padding: 15px 30px;
+
+  flex: 5.5;
 }
