--- a/src/components/presentation/css/ScrollSlides.css
+++ b/src/components/presentation/css/ScrollSlides.css
@@ -1,9 +1,59 @@
-/* .scroll-slide {
-  height: 200px;
+.scroll-slide {
+  width: 100%;
+  box-sizing: border-box;
+  background-color: lightblue;
+  flex: 1;
+  padding: 10px 30px 10px 30px;
+  overflow: hidden;
 }
 
 .scroll-slide__list {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
   list-style-type: none;
   overflow-x: auto;
+
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
- */
+
+.scroll-slide__list::-webkit-scrollbar {
+  height: 8px;
+}
+
+.scroll-slide__list::-webkit-scrollbar-track {
+  background-color: #fafafa;
+  border-radius: 50px;
+}
+
+.scroll-slide__list::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-purple-color);
+  border-radius: 50px;
+}
+
+.scroll-slide__item {
+  min-width: 200px;
+  height: 100%;
+  transition: all 0.15s ease-in-out;
+}
+
+.scroll-slide__item.selected,
+.scroll-slide__item.selected:hover {
+  transform: scale(1.2);
+  border-bottom: 5px solid var(--secondary-pink-color);
+  border-top: 2px solid var(--secondary-pink-color);
+  border-left: 2px solid var(--secondary-pink-color);
+  border-right: 2px solid var(--secondary-pink-color);
+  border-radius: 10px;
+}
+
+.scroll-slide__item:hover {
+  transform: scale(1.05);
+  border-bottom: 3px solid var(--secondary-pink-color);
+  border-top: 1px solid var(--secondary-pink-color);
+  border-left: 1px solid var(--secondary-pink-color);
+  border-right: 1px solid var(--secondary-pink-color);
+  border-radius: 10px;
+}
