--- a/src/components/slide/css/MultipleChoiceSlide.css
+++ b/src/components/slide/css/MultipleChoiceSlide.css
@@ -1,7 +1,7 @@
 .slide__question {
   text-transform: uppercase;
   font-weight: 800;
-  font-size: 96px;
+  font-size: 1em;
   letter-spacing: 2px;
 }
 
