--- a/src/components/slide/css/RadioAnswer.css
+++ b/src/components/slide/css/RadioAnswer.css
@@ -16,12 +16,13 @@
   display: flex;
   align-items: center;
 
-  border-radius: 100px;
-  padding: 14px 16px;
-  margin: 10px 0;
+  border-radius: 10em;
+  padding: 0.3em 0.3em;
+  margin: 0.05em 0;
 
   cursor: pointer;
   transition: 0.3s;
+  gap: 0.5em;
 }
 
 .rad-label:hover,
@@ -33,16 +34,18 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 1px;
-  height: 1px;
+  /*   width: 1px;
+  height: 1px; */
   opacity: 0;
   z-index: -1;
 }
 
 .rad-design {
-  width: 50px;
-  height: 50px;
-  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  width: 0.8em;
+  height: 0.8em;
+  border-radius: 50%;
 
   background: linear-gradient(
     to right bottom,
@@ -73,10 +76,9 @@
 
 .rad-text {
   color: hsl(0, 0%, 60%);
-  margin-left: 14px;
-  letter-spacing: 3px;
+  letter-spacing: 0.15em;
   text-transform: uppercase;
-  font-size: 50px;
+  font-size: 0.8em;
   font-weight: 900;
 
   transition: 0.3s;
