--- a/src/components/slide/css/Slide.css
+++ b/src/components/slide/css/Slide.css
@@ -1,15 +1,12 @@
 .slide {
   width: 100%;
   height: 100%;
-  padding: 60px;
-  background-color: lightgoldenrodyellow;
-
-  color: #212529;
+  padding: 0.6em;
 
   position: relative;
-  /*   background-color: gray; */
-  /*  border-radius: 8px; */
-  /*   cursor: pointer; */
+  background-color: gray;
+  border-radius: 6px;
+  /*     cursor: pointer; */
 }
 
 /* .slide.center {
