--- a/src/page/css/EditorPage.css
+++ b/src/page/css/EditorPage.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
 }
 
 .edit-presentation {
@@ -15,14 +16,13 @@
 
 .edit-presentation--left {
   height: 100%;
-  /*   min-width:  */
-  flex: 1;
+  min-width: 320px;
 }
 
 .edit-presentation--right {
+  width: 100%;
   height: 100%;
-  flex: 4;
-  max-width: 1450px;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
